--- a/index.html
+++ b/index.html
@@ -7,9 +7,8 @@
     <body>
         <h2>Taniya Naskar</h2>
         <img src="./assets/images/Naskar, Taniya Small.png"/>
-        <h4><a href="./public/aboutme.html">About Me</a>  <a href="./public/contactme.html">Contact Me</a></h4>
         <h2>Professional Summary</h2>
-        <p>I am a self-motivated and detail-oriented person with a strong academic background and professional experience in financial analysis, modeling, and forecasting. I recently graduated from Purdue University Fort Wayne as an MBA in Business Analytics with good standing. I possess a solid understanding of data reduction, data sorting, data visualization, and analysis. I am passionate about learning new skills and forsee myself as a future full-stack web developer. </p>
+        <p>I am a self-motivated and detail-oriented person with a strong academic background and professional experience in financial analysis, modeling, and forecasting. I recently graduated from Purdue University Fort Wayne with an MBA in Business Analytics with good standing. I possess a solid understanding of data reduction, data sorting, data visualization, and analysis. I am passionate about learning new skills and foresee myself as a future full-stack web developer. </p>
         <hr/>
         <h2>Education</h2>
         <p>
@@ -58,7 +57,7 @@
                     and other types of optimizations,</li>
                 <li>Worked with different predictive analytics, tools, and techniques,</li>
                 <li>Data visualization, Tableau, introductory knowledge using Twitter Data,</li>
-                <li>Full Stack Web Development - HTML,CSS,JavaScript</li>
+                <li>Full Stack Web Development - HTML, CSS, JavaScript</li>
             </ul>
         </p>
         <hr/>
@@ -80,6 +79,8 @@
                 <li>Watching movies</li>
             </ul>
         </p>
+        <hr/>
+        <h4><a href="./public/aboutme.html">About Me</a>  <a href="./public/contactme.html">Contact Me</a></h4>
         <footer>
             <small>
                 Copyright © 2024 Taniya Naskar. All Rights Reserved.
